jitter points because nefarious web

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Explaining Paleoindian Settlement in the Intermountain West</title>
     <meta charset="utf-8" />
-    <meta name="date" content="2021-04-17" />
+    <meta name="date" content="2021-04-21" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/animate.css/animate.xaringan.css" rel="stylesheet" />
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
@@ -16,8 +16,7 @@
 background-color: black
 
 &lt;!-- 
-The code to generate figures can be found at 
-Rmd/libs/images/generate_presentation_figures.R
+Images are generated elsewhere and simply loaded here.
 --&gt;
 
 
@@ -76,7 +75,7 @@ Person responsible for current analysis
 
 &lt;br&gt;
 
-2021-04-17
+2021-04-21
 
 ]
 
